appId: com.mulaisekarang.app
---
- launchApp:
    clearState: true
- tapOn:
    id: "email_input"
- inputText: "qa-student@mulaisekarang.com"
- tapOn:
    id: "password_input"
- inputText: "QaMobile#2026"
- hideKeyboard
- tapOn:
    id: "login_button"
- extendedWaitUntil:
    visible: "Beranda"
    timeout: 10000

# Navigasi ke semua tab
- tapOn: "KURSUS SAYA"
- swipe:
    direction: DOWN
- tapOn: "CHAT"
- swipe:
    direction: DOWN
- tapOn: "BERANDA"
- tapOn: "BELANJA"
- swipe:
    direction: DOWN
- back
- tapOn: "AKUN"
- scrollUntilVisible:
    element:
      text: ".*Keluar.*"
    direction: DOWN
- tapOn: ".*Keluar.*"
- extendedWaitUntil:
    visible: "Selamat Datang"
    timeout: 5000
