appId: com.mulaisekarang.app
---
- launchApp:
    clearState: true
- tapOn:
    id: "email_input"
- inputText: "qa-student@mulaisekarang.com"
- tapOn:
    id: "password_input"
- inputText: "QaMobile#2026"
- hideKeyboard
- tapOn:
    id: "login_button"
- extendedWaitUntil:
    visible: "Beranda"
    timeout: 10000

- tapOn: "CHAT"
- extendedWaitUntil:
    visible: "Chat"
    timeout: 5000
